layout updates added to avoid overlapping

--- a/ToDo list/src/components/Body/Body.css
+++ b/ToDo list/src/components/Body/Body.css
@@ -1,5 +1,8 @@
 .parent-container {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin: 5px;
 }
 
 .card-parent {
